<resources>
    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello Home fragment. Arg: %1$s</string>
    <string name="inloggen">Inloggen</string>
    <string name="welkom_terug">Welkom terug! Leuk dat je er weer bent.</string>
    <string name="email">Email</string>
    <string name="password">Wachtwoord</string>
    <string name="login">Login</string>
    <string name="forgot_password">Wachtwoord vergeten?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_users">Beheer gebruikers</string>
    <string name="list_of_users">List of users</string>
    <string name="list_of_vms">List of VMs</string>
    <string name="beheer_gebruiker">Beheer gebruiker</string>
    <string name="virtual_machines">Virtual machines</string>
    <string name="customers">Customers</string>
    <string name="members">Members</string>
    <string name="list_of_projects">List of projects</string>
    <string name="projects">Projects</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="einddatum">Einddatum:</string>
    <string name="datum_aanvraag">Datum aanvraag:</string>
    <string name="startdatum">Startdatum:</string>
    <string name="modus">Modus:</string>
    <string name="vm_cluster">VM cluster:</string>
    <string name="host_server">Host server:</string>
    <string name="backups">Backups:</string>
    <string name="availability">Availability:</string>
    <string name="ports">Ports:</string>
    <string name="geheugen_gb">Geheugen (GB)</string>
    <string name="opslag_gb">Opslag (GB)</string>
    <string name="aantal_vcpus">Aantal vCPUs</string>
    <string name="status">Status:</string>
    <string name="fqdn">FQDN:</string>
    <string name="hostnaam">Hostnaam:</string>
    <string name="naam_vm">Naam VM:</string>
    <string name="about">About</string>
    <string name="Email">Email:</string>
    <string name="Departement">Departement</string>
    <string name="Opleiding">Opleiding</string>
    <string name="Externtype">Extern type</string>
    <string name="Telnr">Telefoonnummer</string>
    <string name="Rol">Rol</string>
    <string name="BackupContact">Backup contact</string>
    <string name="VmsGemaakt">Uw aangemaakte Virtuele Machines</string>
    <string name="VmsGelinkt">Uw persoonlijke Virtuele Machines</string>
    <string name="logOut">Log Out</string>

    <string name="com_auth0_client_id">GWoLdOPzWkZmqJ6ioVSlIyoTTk0QWTeJ</string>
    <string name="com_auth0_domain">dev-0oj1g2wm3cvd863w.us.auth0.com</string>
    <string name="com_auth0_scheme">Vic</string>
    <string name="about_info_text">This application is mainly designed for maintaining the Virtual machines of the Virtual IT Company.</string>
    <string name="about_section">About section</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="question_mark">Question mark</string>
    <string name="about_popup_text">If you have any questions, please feel free to contact us by mail by pressing the button underneath.</string>
    <string name="send_email">Send email</string>
    <string name="horizontal_scrollview">horizontal scrollview</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="viewer">Viewer</string>
    <string name="aantal_virtuele_machines">Aantal Virtuele Machines</string>
    <string name="totale_opslag_alle_vms">Totale opslag (alle VMs)</string>
    <string name="totaal_aantal_vcpus">Totaal aantal vCPUs</string>
    <string name="totaal_geheugen">Totaal geheugen</string>
    <string name="virtuele_machines_gelinkt_aan_dit_project">Virtuele Machines gelinkt aan dit project</string>
    <string name="Beschikbaarheid">Beschikbaarheid</string>
    <string name="Technische_details">Technische details</string>
    <string name="Datums">Datums</string>
    <string name="Netwerk">Netwerk</string>
</resources>
