<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/projectListFragment"
        android:title="@string/projects"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"/>
    <item
        android:id="@+id/virtualMachineListFragment"
        android:title="@string/virtual_machines"
        android:icon="@drawable/ic_baseline_install_desktop_24"/>
    <item
        android:id="@+id/listCustomersFragment"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/customers" />

    <item
        android:id="@+id/listMembersFragment"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/members" />
</menu>