<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/projectListFragment"
        android:enabled="true"
        android:icon="@drawable/projects"
        android:title="@string/projects" />

    <item
        android:id="@+id/virtualMachineListFragment"
        android:enabled="true"
        android:icon="@drawable/virtualmachines"
        android:title="@string/virtual_machines" />

    <item
        android:id="@+id/listCustomersFragment"
        android:enabled="true"
        android:icon="@drawable/customers"
        android:title="@string/customers" />

    <item
        android:id="@+id/listMembersFragment"
        android:enabled="true"
        android:icon="@drawable/members"
        android:title="@string/members" />

</menu>