<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/logOut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/go_to_list_projectsBtn"
            style="@style/primaryButton"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/list_of_projects"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_list_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/go_to_list_button"
            style="@style/primaryButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/list_of_vms"
            app:layout_constraintBaseline_toBaselineOf="@+id/go_to_list_projectsBtn"
            app:layout_constraintEnd_toStartOf="@+id/button_second"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/go_to_list_projectsBtn" />

        <Button
            android:id="@+id/button_second"
            style="@style/primaryButton"
            android:layout_marginEnd="16dp"
            android:text="@string/list_of_users"
            app:layout_constraintBaseline_toBaselineOf="@+id/go_to_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/go_to_list_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>