<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.test.screens.about.AboutViewModel" />
    </data>
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:background="@color/backgroundColor">
    
    
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp">
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/popup_title_textview"
                    style="@style/TextAppearance.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/questions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/popup_subtitle_textview"
                    style="@style/TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/about_popup_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/send_email_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popup_title_textview" />

                <Button
                    android:id="@+id/send_email_button"
                    style="@style/secondaryButton"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:drawableLeft="@drawable/mail_icon"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:text="@string/send_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popup_subtitle_textview" />
    
            </androidx.constraintlayout.widget.ConstraintLayout>
    
        </androidx.cardview.widget.CardView>
    
    
    </FrameLayout>

</layout>